# Foempvge

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env  dependabot.yml
.github/workflows/: ci.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/Foempvge/: foempvge_lib.hpp  headers.hpp  sample_library.hpp
include/foe_wsi/: foe_wsi.hpp  headers.hpp
include/foempvge_lib_core/: foempvge_lib_core.hpp
src/: CMakeLists.txt
src/foe_wsi/: CMakeLists.txt  foe_wsi.cpp
src/foempvge/: CMakeLists.txt  main.cpp
src/foempvge_lib/: CMakeLists.txt  foempvge_lib.cpp
src/foempvge_lib_core/: CMakeLists.txt  foempvge_lib_core.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
